overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
   color: white;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .app-body h1 {
